--- a/usr.bin/undo/Makefile
+++ b/usr.bin/undo/Makefile
@@ -16,3 +16,11 @@ $(PROG): $(OBJS)
 	$(CC) $(CFLAGS) -c $<
 clean:
 	rm -f ./*.o ./$(PROG)
+install:
+	install -m 755 ./${PROG} /usr/local/bin/ || exit 1
+	cat ./${PROG}.1 | gzip -9 -n > ./${PROG}.1.gz || exit 1
+	install -m 644 ./${PROG}.1.gz /usr/local/share/man/man1/ || exit 1
+	rm ./${PROG}.1.gz || exit 1
+uninstall:
+	rm /usr/local/bin/${PROG} || exit 1
+	rm /usr/local/share/man/man1/${PROG}.1.gz || exit 1
