--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,10 @@ core*
 sbin/hammer/hammer
 sbin/hammer/test_dupkey
 sbin/newfs_hammer/newfs_hammer
+sbin/mount_hammer/mount_hammer
 sbin/hammer2/hammer2
 sbin/newfs_hammer2/newfs_hammer2
+sbin/mount_hammer2/mount_hammer2
 usr.bin/undo/undo
 usr.sbin/fstyp/fstyp
 
