--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ sbin/mount_hammer/mount_hammer
 sbin/hammer2/hammer2
 sbin/newfs_hammer2/newfs_hammer2
 sbin/mount_hammer2/mount_hammer2
+sbin/fsck_hammer2/fsck_hammer2
 usr.bin/undo/undo
 usr.sbin/fstyp/fstyp
 
