--- a/sbin/fsck_hammer2/Makefile
+++ b/sbin/fsck_hammer2/Makefile
@@ -12,7 +12,7 @@ CFLAGS+= -DXXH_NAMESPACE=h2_
 
 all: $(PROG)
 $(PROG): $(OBJS) ../hammer2/ ../../sys/libkern/ ../../sys/vfs/hammer2/xxhash ../../lib/libc/string
-	$(CC) $(CFLAGS) -o $@ $(OBJS) ../hammer2/uuid.o ../hammer2/subs.o ../../sys/libkern/icrc32.o ../../sys/vfs/hammer2/xxhash/xxhash.o ../../lib/libc/string/strlcpy.o -luuid -lcrypto
+	$(CC) $(CFLAGS) -o $@ $(OBJS) ../hammer2/uuid.o ../hammer2/subs.o ../../sys/libkern/icrc32.o ../../sys/vfs/hammer2/xxhash/xxhash.o ../../lib/libc/string/strlcpy.o ../../lib/libc/string/strlcat.o -luuid -lcrypto
 .c.o:
 	$(CC) $(CFLAGS) -c $<
 clean:
