--- a/sbin/newfs_hammer2/Makefile
+++ b/sbin/newfs_hammer2/Makefile
@@ -11,8 +11,8 @@ CFLAGS+= -DXXH_NAMESPACE=h2_
 .PHONY: all clean
 
 all: $(PROG)
-$(PROG): $(OBJS) ../hammer2/ ../../lib/libc/gen/ ../../sys/libkern/ ../../sys/vfs/hammer2/xxhash
-	$(CC) $(CFLAGS) -o $@ $(OBJS) ../hammer2/uuid.o ../hammer2/subs.o ../../lib/libc/gen/sysctlbyname.o ../../sys/libkern/icrc32.o ../../sys/vfs/hammer2/xxhash/xxhash.o -luuid
+$(PROG): $(OBJS) ../hammer2 ../../lib/libc/gen ../../sys/libkern ../../sys/vfs/hammer2/xxhash
+	$(CC) $(CFLAGS) -o $@ $(OBJS) ../hammer2/uuid.o ../hammer2/ondisk.o ../hammer2/subs.o ../../lib/libc/gen/getdevpath.o ../../lib/libc/gen/sysctlbyname.o ../../sys/libkern/icrc32.o ../../sys/vfs/hammer2/xxhash/xxhash.o -luuid
 .c.o:
 	$(CC) $(CFLAGS) -c $<
 clean:
